login/resources/css/style.css
.login-pf body {
    background-image: none;
    background-color: #016871;
}
#kc-header {
    margin-top: 0;
}
.btn-primary {
    background-image: none;
    background-color: #00838f;
    border: 0;
    border-radius: 24px;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
    background-color: #016871;
}
#kc-form-options .checkbox {
    display: none;
}
#kc-login {
    padding: 8px;
}
@media (max-width: 767px) {
    #kc-header-wrapper {
        color: #FFF;
    }
}
@media (min-width: 768px) {
    .login-pf-page .login-pf-header {
        margin-bottom: 10px;
    }
}

